--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,8 @@ cmake_minimum_required(VERSION 2.8.4)
 project(coursework_third_try)
 
 set(SOURCE_FILES main.cpp game.cpp functions.cpp drawableelement.cpp background.cpp
-controllableelement.h player.cpp bullet.cpp animal.cpp timer.cpp movableelement.h contentmanager.cpp)
+controllableelement.h player.cpp bullet.cpp animal.cpp timer.cpp movableelement.h contentmanager.cpp
+collideableelement.h)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
