--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,10 @@
 cmake_minimum_required(VERSION 2.8.4)
 project(coursework_third_try)
 
-set(SOURCE_FILES main.cpp game.cpp functions.cpp drawableelement.cpp background.cpp
+set(SOURCE_FILES main.cpp functions.cpp drawableelement.cpp background.cpp
 controllableelement.h player.cpp bullet.cpp animal.cpp timer.cpp movableelement.h contentmanager.cpp
-collideableelement.h)
+collideableelement.h screenmanager.cpp gamescreen.cpp gametemp.cpp constants.h backgroundscreen.cpp
+mainmenuscreen.cpp)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
